# ha-audioflow2mqtt

./: .gitignore  CONTEXT.md  Makefile  README.md  repository.yaml
.github/workflows/: release.yml
audioflow2mqtt/: CHANGELOG.md  Dockerfile  app.py  build.yaml  commands.py  config.yaml  device.py  discovery.py  dispatch.py  health.py  mqtt.py  pyproject.toml  wifi.py
audioflow2mqtt/audioflow2mqtt/: README.md  __main__.py  app.py  commands.py  config.py  device.py  dispatch.py  ha_discovery.py  health.py  mqtt.py  mqtt_transport.py
audioflow2mqtt/tests/: test_app.py  test_commands.py  test_config.py  test_device.py  test_dispatch.py  test_ha_discovery.py  test_mqtt.py  test_mqtt_transport.py  test_wifi.py
docs/adr/: 0001-asyncio-over-paho-threads.md  0002-addon-only-divergence-from-upstream.md  0003-supervisor-rest-instead-of-bashio.md  0004-build-with-uv-on-debian-slim.md
tests/: test_commands.py  test_config.py  test_device.py  test_discovery.py  test_health.py  test_mqtt.py
